--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-﻿fastapi
+fastapi
 uvicorn[standard]
 
 pydantic
@@ -12,6 +12,9 @@ python-dotenv
 python-multipart
 aiofiles
 python-json-logger
-
-pytest==9.0.2
+pytest>=8.4,<9
 httpx==0.28.1
+email-validator>=2,<3
+PyJWT>=2.8,<3
+pytest>=8.4,<9
+pytest-asyncio>=0.24,<1
