--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,13 @@ jobs:
       run: |
         cd backend
         python -m pip install --upgrade pip
-        pip install ruff pre-commit
+        pip install "ruff==0.8.4" "pre-commit==4.0.1"
+
+    - name: Show tool versions
+      run: |
+        cd backend
+        ruff --version
+        python --version
         
     - name: Run ruff check
       run: |
