--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         cd backend
         python -m pip install --upgrade pip
-        pip install "ruff==0.8.4" "pre-commit==4.0.1"
+        pip install "ruff==0.8.4"
 
     - name: Show tool versions
       run: |
