chore: fix Attachment description russian text in api-contracts

--- a/api-contracts.yaml
+++ b/api-contracts.yaml
@@ -1296,13 +1296,12 @@ components:
       title: AttachmentDTO
       description: 'SSoT: api-contracts.yaml /components/schemas/Attachment
 
+        ВАЖНО:
 
-        Р вЂ™Р С’Р вЂ“Р СњР С›:
-
-        - Р Р…Р В°РЎР‚РЎС“Р В¶РЎС“ Р С•РЎвЂљР Т‘Р В°РЎвЂР С lower-without-separators: originalfilename, contenttype, sizebytes,
+        - наружу отдаём lower-without-separators: originalfilename, contenttype, sizebytes,
         storagekey, isdeleted, createdat
 
-        - Р Р†Р Р…РЎС“РЎвЂљРЎР‚Р С‘ Р Т‘Р ВµРЎР‚Р В¶Р С‘Р С snake_case: original_filename, content_type, size_bytes, storage_key,
+        - внутри держим snake_case: original_filename, content_type, size_bytes, storage_key,
         is_deleted, created_at'
     AttachmentListResponseDTO:
       properties:
