api: add maximum=200 for suppliers search limit

--- a/api-contracts.yaml
+++ b/api-contracts.yaml
@@ -830,6 +830,7 @@ paths:
         required: false
         schema:
           type: integer
+          maximum: 200
           default: 20
           title: Limit
       responses:
