--- a/api-contracts.yaml
+++ b/api-contracts.yaml
@@ -295,6 +295,7 @@ paths:
         required: false
         schema:
           type: integer
+          maximum: 200
           default: 50
           title: Limit
       - name: offset
@@ -384,6 +385,7 @@ paths:
         required: false
         schema:
           type: integer
+          maximum: 200
           default: 50
           title: Limit
       - name: offset
@@ -495,6 +497,7 @@ paths:
         required: false
         schema:
           type: integer
+          maximum: 200
           default: 200
           title: Limit
       - name: offset
@@ -580,6 +583,7 @@ paths:
         required: false
         schema:
           type: integer
+          maximum: 200
           default: 200
           title: Limit
       - name: offset
@@ -665,6 +669,7 @@ paths:
         required: false
         schema:
           type: integer
+          maximum: 200
           default: 200
           title: Limit
       - name: offset
@@ -866,6 +871,7 @@ paths:
         required: false
         schema:
           type: integer
+          maximum: 200
           default: 50
           title: Limit
       responses:
@@ -950,6 +956,7 @@ paths:
         required: false
         schema:
           type: integer
+          maximum: 200
           default: 50
           title: Limit
       - name: offset
@@ -1096,6 +1103,7 @@ paths:
         required: false
         schema:
           type: integer
+          maximum: 200
           default: 200
           title: Limit
       responses:
@@ -1459,6 +1467,7 @@ components:
         required: false
         schema:
           type: integer
+          maximum: 200
           default: 200
           title: Limit
       - name: offset
