--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,9 @@ backend/openapi-runtime.json
 # OS/IDE
 .DS_Store
 .vscode/
-.idea/
+.idea/# local-only env (do not commit secrets)
+backend.env
+
+# local artifacts
+openapi-diff.csv
+prompt/
