feat(api): add moderator parsing status/results per key

--- a/api-contracts.yaml
+++ b/api-contracts.yaml
@@ -3,6 +3,96 @@ info:
   title: B2B Platform API
   version: 1.0.0
 paths:
+
+
+
+/moderator/requests/{requestId}/parsing-results:
+  get:
+    tags:
+    - ModeratorTasks
+    summary: Get Parsing Results
+    operationId: get_parsing_results_apiv1_moderator_requests__requestId__parsing_results_get
+    parameters:
+    - name: requestId
+      in: path
+      required: true
+      schema:
+        type: integer
+        title: Requestid
+    responses:
+      '200':
+        description: Successful Response
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ParsingResultsResponseDTO'
+      '422':
+        description: Validation Error
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/HTTPValidationError'
+
+/moderator/requests/{requestId}/parsing-status:
+  get:
+    tags:
+    - ModeratorTasks
+    summary: Get Parsing Status
+    operationId: get_parsing_status_apiv1_moderator_requests__requestId__parsing_status_get
+    parameters:
+    - name: requestId
+      in: path
+      required: true
+      schema:
+        type: integer
+        title: Requestid
+    responses:
+      '200':
+        description: Successful Response
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ParsingStatusResponseDTO'
+      '422':
+        description: Validation Error
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/HTTPValidationError'
+
+/moderator/requests/{requestId}/start-parsing:
+  post:
+    tags:
+    - ModeratorTasks
+    summary: Start Parsing
+    operationId: start_parsing_apiv1_moderator_requests__requestId__start_parsing_post
+    parameters:
+    - name: requestId
+      in: path
+      required: true
+      schema:
+        type: integer
+        title: Requestid
+    requestBody:
+      required: false
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/StartParsingRequestDTO'
+    responses:
+      '200':
+        description: Successful Response
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/StartParsingResponseDTO'
+      '422':
+        description: Validation Error
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/HTTPValidationError'
+
   /health:
     get:
       tags:
@@ -2002,3 +2092,105 @@ components:
       required:
       - recipients
       additionalProperties: false
+
+StartParsingRequestDTO:
+    type: object
+    additionalProperties: false
+    properties:
+      keys:
+        type: array
+        description: Optional filter. If omitted, parse all keys of the request.
+        items:
+          type: integer
+    required: []
+
+  StartParsingResponseDTO:
+    type: object
+    additionalProperties: false
+    properties:
+      requestId:
+        type: integer
+      started:
+        type: boolean
+      runId:
+        type: string
+        description: Parser run identifier (opaque).
+    required: [requestId, started, runId]
+
+  ParsingRunStatus:
+    type: string
+    enum: [queued, running, succeeded, failed]
+
+  ParsingKeyStatusDTO:
+    type: object
+    additionalProperties: false
+    properties:
+      keyId:
+        type: integer
+      status:
+        $ref: '#/components/schemas/ParsingRunStatus'
+      itemsFound:
+        type: integer
+        minimum: 0
+      error:
+        type: string
+        nullable: true
+    required: [keyId, status, itemsFound, error]
+
+  ParsingStatusResponseDTO:
+    type: object
+    additionalProperties: false
+    properties:
+      requestId:
+        type: integer
+      runId:
+        type: string
+      status:
+        $ref: '#/components/schemas/ParsingRunStatus'
+      keys:
+        type: array
+        items:
+          $ref: '#/components/schemas/ParsingKeyStatusDTO'
+    required: [requestId, runId, status, keys]
+
+  ParsingResultItemDTO:
+    type: object
+    additionalProperties: false
+    properties:
+      url:
+        type: string
+      domain:
+        type: string
+      source:
+        type: string
+        enum: [google, yandex]
+      title:
+        type: string
+        nullable: true
+    required: [url, domain, source, title]
+
+  ParsingResultsByKeyDTO:
+    type: object
+    additionalProperties: false
+    properties:
+      keyId:
+        type: integer
+      items:
+        type: array
+        items:
+          $ref: '#/components/schemas/ParsingResultItemDTO'
+    required: [keyId, items]
+
+  ParsingResultsResponseDTO:
+    type: object
+    additionalProperties: false
+    properties:
+      requestId:
+        type: integer
+      runId:
+        type: string
+      results:
+        type: array
+        items:
+          $ref: '#/components/schemas/ParsingResultsByKeyDTO'
+    required: [requestId, runId, results]
