chore: clean up gitattributes eol rules

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,10 +6,12 @@
 *.yml    text eol=lf
 *.yaml   text eol=lf
 *.md     text eol=lf
+*.txt    text eol=lf
 *.sh     text eol=lf
 *.ps1    text eol=lf
+justfile text eol=lf
 
-# Windows-only scripts (if ever added)
+# Windows-only scripts
 *.bat    text eol=crlf
 *.cmd    text eol=crlf
 
@@ -20,14 +22,3 @@
 *.gif    binary
 *.pdf    binary
 *.ico    binary
-PROJECT-TREE.txt text eol=lf
-.gitattributes text eol=lf
-
-# Line endings normalization (Windows-friendly, repo-stable)
-* text=auto
-
-*.md      text eol=lf
-*.yaml    text eol=lf
-*.yml     text eol=lf
-justfile  text eol=lf
-*.ps1     text eol=crlf
